@@ -6,25 +6,25 @@ yanoid before the game can be considered ready for the contest.
 
 - Collision code is flaky (JCD, is on the way) <-- fixed?
 - Paddle should not leave the map (JCD?)
-- More maps (BS,...)?
+- More maps (BS,MBD...)?
 
 
 **********************************************************************
 ** IMPORTANT (or possible easy - stuff that we really should do)
 
-* Powerups
+* Powerups (MBD)
 
 * Sounds (BS)
 - Menu sounds 
-- ball hits paddle sound
+- ball hits paddle sound (.)
 - ball hits wall sound
-- ball hits brick sound
+- ball hits brick sound (.)
 - brick effect sounds (explosion, disappear, whatever)
 - powerup sounds
 - bad sounds
 - gem sounds
 
-* Autotool (MBD?)
+* Autotool (MBD)
 - Make sure that we fail when something essentiel is missing
 - need to add libvorbisfile (-lvorbis -lvorbisfile) to configure.in
 - need to add asound (-lasound) to configure.in (alsa-lib-devel)
