@@ -1,5 +1,6 @@
 # This file implements a basic_brick object
 
 def basic_brick_hit():
-    print "basic_brick_hit"
     AdjustScore(10)
+    PlaySound("sounds/pop.wav")
+    
