@@ -1,5 +1,5 @@
 pkgdatadir = $(datadir)/games/@PACKAGE@/scripts
 
-pkgdata_DATA = yanoid.py map_interface.py game_interface.py
+pkgdata_DATA = yanoid.py map_interface.py game_interface.py client_interface.py
 
 EXTRA_DIST = $(pkgdata_DATA)
