@@ -12,3 +12,4 @@ def AdjustScore(dscore):
 def AddMap(mapname):
     "Add a map to the list of maps in the game"
     yanoid_game.AddMap(mapname)
+
