@@ -1,5 +1,5 @@
 pkgdatadir = $(datadir)/games/@PACKAGE@/sounds
 
-pkgdata_DATA = pop.wav
+pkgdata_DATA = pop.wav blip.wav
 
 EXTRA_DIST = $(pkgdata_DATA)
