@@ -323,6 +323,7 @@ int main(int argc, char ** argv) {
 
   TMap::AddModule();
   TGame::AddModule();
+  TClient::AddModule();
   Interprenter->LoadDefaultScripts();
   /* Dump the Interprenter help to the console */
   Interprenter->RunSimpleString("help()");
