@@ -1,3 +1,10 @@
+2001-11-21  Mads Bondo Dydensborg  <madsdyd@mother>
+
+	* Sounds and stuff
+	Added some sounds, now can be played from scripts
+	Bricks can now stay for "some" time
+	Added CREDITS file
+
 2001-11-20  Mads Bondo Dydensborg  <madsdyd@mother>
 
 	* Cleaning lady
